kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cfx-sre
  labels:
    app: cfx-sre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cfx-sre
  template:
    metadata:
      labels:
        app: cfx-sre
    spec:
      containers:
        - name: cfx-sre
          image: ghcr.io/zainal-abidin-assegaf/cfx-sre:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
