kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cfx-sre
  labels:
    app: cfx-sre
spec:
  type: ClusterIP
  selector:
    app: cfx-sre
  ports:
    - port: 3000
      targetPort: 3000
